# open-skej

./: .gitignore  CLAUDE.md  DEFERRED.md  README.md  docker-compose.yml  nirgit.pub  setup.mdd  stream-1-plan.md  stream-2-plan.md  stream-3-plan.md
.claude/rules/: git-access.md  identity-and-access.md  rule-engine.md  stream-1-booking.md  stream-2-auth.md  stream-3-rules.md
.github/workflows/: ci.yml
app/backend/: .flake8  alembic.ini  requirements.txt
app/backend/alembic/: env.py
app/backend/app/: dependencies.py  main.py  migration_filter.py  operating_hours.py  rules_stub.py  sandbox_seed.py  schemas.py  settings.py
app/backend/scripts/: __init__.py  auth0_provision.py
app/backend/tests/: conftest.py  test_auth0_provision.py  test_db.py  (+14 more)
app/e2e/: .gitignore  global-setup.ts  package-lock.json  package.json  playwright.config.ts
app/frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
backend/app/: main.py
client/: package-lock.json  package.json
client/src/: App.tsx  store.ts
deploy/: docker-compose.yml  postgres.env
rules/: pyproject.toml  requirements.txt
rules/generation/: __init__.py  errors.py  generator.py  harness.py  llm.py  loop.py  tester.py
rules/rules/: __init__.py  canon.py  controller.py  frequency.py  interfaces.py  safety.py  sandbox.py
rules/tests/: test_canon.py  test_controller.py  test_frequency.py  test_generator.py  test_interfaces.py  test_loop.py  test_safety.py  test_sandbox.py  test_tester.py
server/: Dockerfile  pyproject.toml
server/src/: main.py
(+101 files in other folders)
